[package]
edition = "2021"
name = "led-tree-rs"
version = "0.1.0"
repository = "https://github.com/mihneabuz/led_tree.git"

[dependencies]
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
sysinfo = "0.27.2"
tiny_http = "0.12.0"
reqwest = { version = "0.11", features = ["blocking"] }
colored = "2.0.0"

[[bin]]
name = "christmas-tree"
path = "src/main.rs"
