[package]
name = "led-tree-rs"
version = "0.1.0"
repository = "https://github.com/mihneabuz/led_tree.git"

[dependencies]
serde = { version = "1.0.102", features = ["derive"] }
serde_json = "1.0.81"
sysinfo = "0.27.0"
tiny_http = "0.10.0"
reqwest = { version = "0.11", features = ["blocking"] }
colored = "1.0.0"

[[bin]]
name = "christmas-tree"
path = "src/main.rs"
